--- a/index.html
+++ b/index.html
@@ -1,18 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./src/assets/css/style.css" />
+        <title>Project</title>
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Project</title>
-</head>
+    <body>
+        <nav>
+            <div class="logo">
+                <a href="#">Logo</a>
+            </div>
 
-<body>
-    start
+            <div class="nav-links">
+                <a href="#">Work</a>
+                <a href="#">Studio</a>
+                <a href="#">Contact</a>
+            </div>
+        </nav>
 
-    <script src="./assets/js/main.js"></script>
-</body>
+        <div class="slider">
+            <div class="slide-track"></div>
+        </div>
 
+        <footer>
+            <p>Learn More</p>
+            <p>2025 #livelovelaugh</p>
+        </footer>
+
+        <script src="./src/assets/js/main.js"></script>
+    </body>
 </html>
