05. usefull-things-238-scroll. Parallax slider.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <p>2025 #livelovelaugh</p>
         </footer>
 
-        <script src="./src/assets/js/main.js"></script>
+        <script type="module" src="./src/assets/js/sliderData.js"></script>
+        <script type="module" src="./src/assets/js/main.js"></script>
     </body>
 </html>
